[package]
name = "keen"
version = "1.3.0"
authors = ["Wu Young <doomsplayer@gmail.com>"]
description = "keen.io api v3.0 for rust"
homepage = "http://github.com/doomsplayer/keenio-rs.git"
repository = "http://github.com/doomsplayer/keenio-rs.git"
documentation = "http://doomsplayer.github.io/keenio-rs/keen/index.html"
readme = "README.md"
keywords = ["keenio", "keen"]
license = "MIT"


[lib]
path = "src/lib.rs"
name = "keen"

[dependencies]
chrono = "^0.2"
itertools = "^0.4"

[dependencies.hyper]
version = "^0.9"

[dependencies.clippy]
version = "0.0.90"
optional = true

[dev-dependencies]
docopt = "*"
rustc-serialize = "*"

[features]
default = []
dev = ["clippy"]

