[package]
name = "keen"
version = "1.4.2-pre"
authors = ["Wu Young <doomsplayer@gmail.com>"]
description = "keen.io api v3.0 for rust"
homepage = "http://github.com/doomsplayer/keenio-rs.git"
repository = "http://github.com/doomsplayer/keenio-rs.git"
documentation = "http://doomsplayer.github.io/keenio-rs/keen/index.html"
readme = "README.md"
keywords = ["keenio", "keen"]
license = "MIT"


[lib]
path = "src/lib.rs"
name = "keen"

[dependencies]
chrono = "^0.3"
itertools = "^0.4"
hyper = "0.10.0"
hyper-rustls = "0.3"

[dependencies.clippy]
version = "0.0.118"
optional = true

[dev-dependencies]
structopt = "0.0.3"
structopt-derive = "0.0.3"

[features]
default = []
dev = ["clippy"]

